<resources>
    <string name="app_name">PetrolPal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading_text">Loading prices&#8230;</string>


    <!--   ACTION BAR ITEMS    -->
    <string name="remove_all">Remove all stops</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="refresh">Refresh</string>
    <string name="cast_app_id">7CC7E451</string>
    <string name="namespace">ppn</string>
    <string name="main_bottom_ad">ca-app-pub-1105785661696607/1552472378</string>
    <string name="ad_mod_app_id">ca-app-pub-1105785661696607~8157409174</string>
    <string name="add_stop_interstitial_ad_unit">ca-app-pub-1105785661696607/</string>
    <string name="license_dialog_title">Open Source Licenses</string>
    <string name="gps_not_enabled">Turn on GPS or allow permission to use GPS</string>
    <string name="cancel">Cancel</string>
    <string name="loc_settings">Location Settings</string>

    <string name="placeholder_fuelprice">116.5</string>

    <string name="currency_dollar">$</string>
    <string name="currency_pound">£</string>
    <string name="currency_euro">€</string>

    <string name="all_licenses">

        <b>JSOUP - Jonathan Hedley\n</b>

        The jsoup code-base (include source and compiled packages) are distributed under the open source MIT license as described below.

The MIT License
Copyright © 2009 - 2016 Jonathan Hedley (jonathan@hedley.net)

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


        <b>\n\n\nGraphView</b>

        Copyright [2016] Jonas gehrig.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License

        GraphView is currently published under GPLv2 including "GPL linking exception". Which means that you are allowed to use it in your closed source applications.


 FFA GPL License info  <![CDATA[<a href="https://github.com/jjoe64/GraphView/blob/master/license.txt">here</a>]]>

        <b>\n\n\nFuel Prices</b>
        With thanks to Googles search snippet, RACV, RAA, NRMA organisations for displaying the fuel price data

        <b>\n\n\nGoogle Play Services</b>
Copyright [2016] Google inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.



    </string>


    <string name="maps_api_key">AIzaSyDe3ds4ilBQKeE9jGniDftAF-6xHE2LznE</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="addCostHint">$</string>
    <string name="no_stops_to_show">No stops to show</string>
    <string name="confirm_add">DONE</string>
    <string name="drawer_map">Map</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="drawer_licenses">Licenses</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
