<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Receipts" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/drawer_map" />
    </group>

    <item android:title="Tools">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_feedback"

                android:title="@string/drawer_feedback" />
            <item
                android:id="@+id/nav_licenses"

                android:title="@string/drawer_licenses" />
        </menu>
    </item>

</menu>
