<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        android:icon="@drawable/ic_cast_dark"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>


    <item android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        app:showAsAction="ifRoom"/>


    <!-- Settings, should always be in the overflow -->





    <item android:id="@+id/action_remove_all_stops"
        android:title="@string/remove_all"
        app:showAsAction="never"/>

    <item android:id="@+id/action_add_dummy_stops"
        android:title="addDummy"
        app:showAsAction="never"/>

</menu>